--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     </head>
 
     <body>
-        <div id="header" class="section">
-            <button type="button" class="header-button">About</button>
-            <button type="button" class="header-button">Contact</button>
-            <button type="button" class="header-button" id="order">Order</button>
+        <div id="header">
+            <img src="images/placeholder-logo.png" alt="Volcano 1520 logo" class="logo">
+            <div class="header-buttons">
+                <button type="button">About</button>
+                <button type="button">Contact</button>
+                <button type="button" id="order-btn">Order</button>
+            </div>
         </div>
 
-        <div id="hero" class="section">
+        <div id="hero">
 
         </div>
 
-        <div id="footer" class="section">
+        <div id="footer">
             
         </div>
     </body>
