Add sticky footer to index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="footer">
-            
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
         </div>
     </body>
 </html>
