Add grid to index.html

--- a/index/index.html
+++ b/index/index.html
@@ -24,10 +24,17 @@
                 <script src="./scripts/fadein.js"></script>
             </video>
     
-            <div id="hero-text">
-                <h1>Volcano</h1>
+            <div id="hero-content">
+                <img src="../media/placeholder-logo.png" alt="Volcano 1520 logo" class="logo">
                 <p>Handcrafting happiness, one chocolate at a time.</p>
+                <button type="button" id="order-btn">Discover our chocolates</button>
             </div>
+        </div>
+
+        <div id="grid">
+            <img class="col-btn" src="../media/bars.jpg" alt="Chocolate bars decorated with pretzels, dried fruits and pecans">
+
+            <img class="col-btn" src="../media/chocolates.jpg" alt="">
         </div>
 
         <div id="footer">
