Fix footer to bottom of page

--- a/index/index.html
+++ b/index/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
-        <title>Volcano | </title>
+        <title>Volcano1520</title>
     </head>
 
     <body>
@@ -31,10 +31,18 @@
             </div>
         </div>
 
-        <div id="grid">
-            <img class="col-btn" src="../media/bars.jpg" alt="Chocolate bars decorated with pretzels, dried fruits and pecans">
+        <div id="collections">
+            <h1 id="col-text">Collections</h1>
+            <div id="grid">
+                <a href="../index/index.html"><img class="col-btn" src="../media/bars.jpg" alt="Chocolate bars decorated with pretzels, dried fruits and pecans"></a>
 
-            <img class="col-btn" src="../media/chocolates.jpg" alt="">
+                <a href="../index/index.html"><img class="col-btn" src="../media/chocolates.jpg" alt=""></a>
+    
+                <a href="../index/index.html"><img class="col-btn" src="../media/placeholder-logo.png" alt=""></a>
+    
+                <a href="../index/index.html"><img class="col-btn" src="../media/placeholder-logo.png" alt=""></a>
+            </div>
+
         </div>
 
         <div id="footer">
