Replace logo and touch up hero section

--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div id="header">
-            <img src="../media/placeholder-logo.png" alt="Volcano 1520 logo" class="logo">
+            <embed src="../media/logo-less.svg" alt="Volcano 1520 logo" class="logo">
             <div class="header-buttons">
                 <button type="button">About</button>
                 <button type="button">Contact</button>
@@ -25,7 +25,7 @@
             </video>
     
             <div id="hero-content">
-                <img src="../media/placeholder-logo.png" alt="Volcano 1520 logo" class="logo">
+                <embed src="../media/logo.svg" alt="Volcano 1520 logo" class="logo">
                 <p>Handcrafting happiness, one chocolate at a time.</p>
                 <button type="button" id="order-btn">Discover our chocolates</button>
             </div>
