Center hero-content

--- a/index/index.html
+++ b/index/index.html
@@ -23,7 +23,7 @@
                 <video loop muted autoplay playsinline id="hero-video">
                     <source src="../media/hero-background.mp4" type="video/mp4">
                     
-                    <script src="./scripts/fadein.js"></script>
+                    <!-- <script src="./scripts/fadein.js"></script> -->
                 </video>
         
                 <div id="hero-content">
