--- a/index/index.html
+++ b/index/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <div id="header">
+            <a href="#" class="scrolltotop"></a>
             <embed src="../media/logo-less.svg" alt="Volcano 1520 logo" class="logo">
             <div class="header-buttons">
                 <div class="dropdown">
@@ -48,7 +49,6 @@
                     <p>Founded in [Year], Volcano has been dedicated to crafting exquisite chocolate creations that tantalize your taste buds and evoke a sense of pure joy.</p>
                     <img src="../media/about.jpg" alt="Mohammad Tamimi and Feras Shweiki making chocolate">
                 </div>
-
             </div>
 
             <div id="contact">
